--- a/codingjournal.html
+++ b/codingjournal.html
@@ -207,7 +207,25 @@
     <section class="border">
         <p>At first it worked great, then I got errors. Now how to fix those errors and get GIT in VS working again takes time and the ability to deal with the aggravation of what seems to be losing your time along with your mind.</p>
     </section>
-
+    <h2>2025-0518-0553 - Repository: 2025-0518-0416</h2>
+    <section class="border">
+        <p>Having issues understanding Git with VS. So, I started a new folder and copied the contents from 0422-2 folder into 2025-0518-0416 folder. Here I hope to get a grasp on the GIT operations with VS, GIT and GitHub.</p>
+        <p>I believe that when I click on the option to commit all. That included the .vs file. I then commited everything expect that file, byt right clickin on the .vs folder and choosing the option to ignore file. I further tried this with the old 0422-2 folder, but the option to ignore that folder wasn't present. So, I'll continue in the 2025-0518-0416 folder on this system. I plan to migrate everrything in the other two places that I've been editing code, the laptop and the 2070 system.</p>
+        <p>Adding theme setting seems to have knocked out my ability to see if I need to commit any changes to specific files. Okay, never mind. I see it.</p>
+    </section>
+    <h2>2025-0518-0758 - GIT COMMITS</h2>
+    <section class="border">
+        <ol>
+            <li>Clcik on Git Changes</li>
+            <li>Ignore .vs folder always</li>
+            <li>Find the files that have been changed, indicated by an M or U or D. Anything other than and A</li>
+            <li>Click on the plus to stage the file</li>
+            <li>Write a message in the Commit section</li>
+            <li>Click Commit - (This commits changes to git locally</li>
+            <li>Click on the push arrow up to commit the changes to GitHub account - This commits changes to GitHub</li>
+            <li>Alternaitvely you can pull files, which means that you would be pulling files from you local machine into the staging area to be then pushed to GitHub</li>
+        </ol>
+    </section>
 
     <!-- Right before this note, Add the next dated entry-->
 
