--- a/javascript.html
+++ b/javascript.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet">
     <script src="static/Script1.js"></script>
+    <script src="static/Script2.js"></script>
 </head>
 <body class="iceland-regular">
     <header>
