--- a/home.html
+++ b/home.html
@@ -47,6 +47,8 @@
                 <li><a target="_blank" href="https://scotts-ads.com">Scott's Ads</a></li>
                 <li><a target="_blank" href="https://lintless-vents.com">Lintless Vents</a></li>
                 <li><a target="_blank" href="https://royssmallenginerepair.com">Roy's small engine repair</a></li>
+                <li><a target="_blank" href="https://publish.obsidian.md/coding">Obsidian coding notes</a></li>
+                
             </ul>
         </section>
         <h2>Pertaining to me</h2>
