--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <li><a target="_blank" href="https://scotts-ads.com">Scott's Ads</a></li>
                 <li><a target="_blank" href="https://lintless-vents.com">Lintless Vents</a></li>
                 <li><a target="_blank" href="https://royssmallenginerepair.com">Roy's small engine repair</a></li>
+                <li><a target="_blank" href="https://publish.obsidian.md/coding">Obsidian coding notes</a></li>
+
             </ul>
         </section>
         <h2>Pertaining to me</h2>
@@ -76,11 +78,11 @@
             </ul>
         </section>
         <div id="Page1" style="background-color:rgb(0, 0, 0);color:rgb(255, 255, 255)">
-            <h1>Hello I am In Section One Without Refresh </h1>
+            <h1>Hello I am In Section One Without Refresh</h1>
             <a href="#" onclick="return show('Page2','Page1');">INVERT</a>
         </div>
         <div id="Page2" style="display:none;background-color:rgb(255, 255, 255);color:rgb(0, 0, 0);">
-            <h1>Hello I am In Section Two Without Refresh </h1>
+            <h1>Hello I am In Section Two Without Refresh</h1>
             <a href="#" onclick="return show('Page1','Page2');">INVERT</a>
         </div>
     </main>
