--- a/codingjournal.html
+++ b/codingjournal.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet">
+    <script src="static/Script2.js"></script>
 </head>
 <body class="iceland-regular">
     <header>
@@ -25,10 +26,26 @@
         </nav>
     </header>
     <h1>Coding Journal</h1>
-    <a class="btn" href="javascript: document.body.scrollIntoView(false);">To the bottom</a>
+
+    <br />
+    <section = class="border">
+        <a class="btn-b" href="javascript: document.body.scrollIntoView(false);">To the bottom</a>
+        <br />
+
+        <form name="f1" action=""
+              onSubmit="if(this.t1.value!=null && this.t1.value!='') findString(this.t1.value);return false">
+            <input type="text" name=t1 value="" size=20>
+            <input type="submit" name=b1 value="find">
+            <p class="border">
+                Your search will be highlighted on this page only (not case sensitive) according to your system's 'browser settings. Press ENTER to go to the next find.
+            </p>
+        </form>
+    </section>
+    <br />
+
     <h2>2025-0405-0640</h2>
     <section class="border">
-        <p>I would first like to note the format for entry time "202504050640" broken down is  "0000" year with 4 digits, "0000" month and dqy both is with dual digits and both month and day totaling 4 digits, "0000" the time of day using military time format giving us a code for the time and day = 202504050640. This is how I plan to name things from here on out, including these journal entires as part of a name convention for myself. This portion of this journal is written with VS 2022, logging this journey journalistically in descending order on this page which I will somehow host live someday.</p>
+        <p>I would first like to note the format for entry time "202504050640" broken down is "0000" year with 4 digits, "0000" month and dqy both is with dual digits and both month and day totaling 4 digits, "0000" the time of day using military time format giving us a code for the time and day = 202504050640. This is how I plan to name things from here on out, including these journal entires as part of a name convention for myself. This portion of this journal is written with VS 2022, logging this journey journalistically in descending order on this page which I will somehow host live someday.</p>
         <p><span class="underline">UPDATE on Entries.</span>I like the dashes inbetween the sections of year, day and time; YYYY-MMDD-HHMM. Much easier to read quickly and also easier to keep from making mistakes. I found qutie a few mistakes when adjusting the order from descending to ascending.</p>
     </section>
     <h2>2025-0405-0716</h2>
@@ -226,10 +243,23 @@
             <li>Alternaitvely you can pull files, which means that you would be pulling files from you local machine into the staging area to be then pushed to GitHub</li>
         </ol>
     </section>
+    <h2>2025-0524-0458 - Certifications</h2>
+    <section class="border">
+        <p>Looking into certifications. Not certain I'm ready to learn, not. Of course I am. I've been learning As Much As Possible (AMAP) with every spare minute I have. I experience burn out from time to time, it's then when I'll simply take a break and do something else, like work in the wood shop or fix things around the house or just rest and vegetate in front of one of the many TVs we have.</p>
+        <p>So, I've already started to earn a certificate from <span><a href="https://www.freecodecamp.org/learn/">FreeCodeCamp</a></span> and I plan to learn from <span><a href="https://developer.mozilla.org/en-US/curriculum/">MDN</a></span> also. I also really like the W3 schools website created from the creators of the internet itself and them that created the code that translates all we interact with on the internet. So, ya I plan to get a certificate from there too. It might seem like overkill to get multiple certificates for the same thing from different sources. Although It's not like I'm spending $14,000 on a code boot camp which some folks pay. I actually have considered it, but doubtfull considering the vast resource of infomraiton everywhere. Not to mention I would also like to go through<span><a href="https://www.youtube.com/@futurefullstack">Future full Stack</a></span> to get certified through this set up as well. I like how he delivers the information and I have learned most of what I know so far from mostly listening to his videos.</p>
+    </section>
+    <h2>2025-05-24-05-31 - ISO 8601 format</h2>
+    <section class="border">
+        <p>Looking into certifications. Not certain I'm ready to learn, not. Of course I am. I've been learning As Much As Possible (AMAP) with every spare minute I have. I experience burn out from time to time, it's then when I'll simply take a break and do something else, like work in the wood shop or fix things around the house or just rest and vegetate in front of one of the many TVs we have.</p>
+        <p>The time stamp format above is considered to be the International Organization for Standardization (ISO). While I would like to adhere to </p>
+    </section>
 
     <!-- Right before this note, Add the next dated entry-->
-
-    <a class="btn" href="javascript: document.body.scrollIntoView(true);">To the top</a>
+    <section class="section-a">
+        <p class="p-a">Thank you for visiting</p>
+    </section>
+    <br />
+    <a class="btn-b" href="javascript: document.body.scrollIntoView(true);">To the top</a>
     <footer>
         <p>How will I know if I don't try?</p>
         <a href="https://scotthamilton.site/">Scott Hamilton's Site</a>
