--- a/css.html
+++ b/css.html
@@ -28,8 +28,9 @@
     <h1 class="iceland-regular">CSS</h1>
     <br>
     <p>Snipets of code all over the place.</p>
-    <h4><a target="_blank" href="testpage3.html">Test Page 3</a></h4>
-    <h4><a target="_blank" href="testpage4.html">Test Page 4</a></h4>
+    <h2><a target="_blank" href="testpage3.html">Test Page 3</a></h2>
+    <h2><a target="_blank" href="testpage4.html">Test Page 4</a></h2>
+    <h2><a target="_blank" href="hovereffects.html">HOVER EFFECTS</a></h2>
     <br>
     <!--- Code for snippet copying on the HTML webpage, down to the bottom of br -->
     <hr>
