--- a/javascript.html
+++ b/javascript.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet">
     <script src="static/Script1.js"></script>
+    <script src="static/Script2.js"></script>
 </head>
 <body class="iceland-regular">
     <header>
@@ -26,9 +27,12 @@
         </nav>
     </header>
     <h1 class="iceland-regular">JAVASCRIPT</h1>
-    <p>Snipets of code all over the place.</p>
-    <h4><a target="_blank" href="testpage5.html">Test Page 5</a></h4>
-    <h4><a target="_blank" href="testpage6.html">Test Page 6</a></h4>
+    <ul>
+        <li><a target="_blank" href="testpage5.html">Test Page 5</a></li>
+        <li><a target="_blank" href="testpage6.html">Test Page 6</a></li>
+        <li><a target="_blank" href="javascript3.html">Javascript 3</a></li>
+    </ul>
+
     <!--- Code for snippet copying on the JAVASCRIPT webpage, down to the bottom -->
     <button id="copyButtonF">Copy Code below</button>
     <section class="border">
@@ -58,7 +62,7 @@
                 width="99.5%"
                 margin-left="10px"
                 margin-bottom="10px">
-         </iframe>
+        </iframe>
     </section>
     <div id="Page1" style="background-color:rgb(0, 0, 0);color:rgb(255, 255, 255)">
         <h1>Hello I am In Section One Without Refresh </h1>
