--- a/testpage4.html
+++ b/testpage4.html
@@ -24,21 +24,13 @@
             </ul>
         </nav>
     </header>
-    <div class="grid-container">
-        <div><img margin="auto" align="right" width="80" src="images/LOGO-150-PNG.png" alt="logo"></div>
-        <div>
-            <nav class="nav">
-                <ul>
-                    <li><a target="_self" href="home.html"><button class="btn">Coding Journey</button></a></li>
-                    <li><a target="_self" href="about.html"><button class="btn">About</button></a></li>
-                    <li><a target="_self" href="codingjournal.html"><button class="btn">Coding Journal</button></a></li>
-                    <li><a target="_self" href="code.html"><button class="btn">CODE</button></a></li>
-                    <li><a target="_self" href="links.html"><button class="btn">Links</button></a></li>
-                    <li><a target="_blank" href="https://netform.info/Scott-Hamiltons-Coding-site"><button class="btn">Contact me</button></a></li>
-                </ul>
-            </nav>
-        </div>
-        <div><p> </p></div>
+    <h1>Hover effects</h1>
+    <div class="hovernow">
+
+    </div>
+    <p class="p-a">Simple hover effect</p>
+    <div class="section-a">
+<p>Section A</p>
     </div>
     <footer>
         <a href="https://scotthamilton.site/">Scott Hamilton's Site</a>
