--- a/html.html
+++ b/html.html
@@ -26,9 +26,11 @@
     </header>
     <h1 class="iceland-regular">HTML</h1>
     <p>Snipets of code all over the place.</p>
-    <h4><a target="_blank" href="buttons.html">Buttons</a></h4>
-    <h4><a target="_blank" href="testpage1.html">Test Page 1</a></h4>
-    <h4><a target="_blank" href="testpage2.html">Test Page 2</a></h4>
+    <h2><a target="_blank" href="buttons.html">Buttons</a></h2>
+    <h2><a target="_blank" href="testpage1.html">Test Page 1</a></h2>
+    <h2><a target="_blank" href="testpage2.html">Test Page 2</a></h2>
+    <h2><a target="_blank" href="form-a.html">Form A</a></h2>
+    <h2><a target="_blank" href="form-b.html">Form B</a></h2>
 
     <!--- Code for snippet copying on the HTML webpage, down to the bottom of br -->
     <section class="border">
@@ -61,7 +63,7 @@
                 width="99.5%"
                 margin-left="10px"
                 margin-bottom="10px">
-    </iframe>
+        </iframe>
     </section>
     <br />
     <section class="border">
@@ -94,7 +96,7 @@
                 width="99.5%"
                 margin-left="10px"
                 margin-bottom="10px">
-    </iframe>
+        </iframe>
     </section>
     <br />
     <section class="border">
@@ -127,7 +129,7 @@
                 width="99.5%"
                 margin-left="10px"
                 margin-bottom="10px">
-    </iframe>
+        </iframe>
     </section>
     <br />
     <section class="border">
