--- a/webdev.html
+++ b/webdev.html
@@ -29,28 +29,23 @@
             </ul>
         </nav>
     </header>
-    <h1 class="iceland-regular">Coding Journey</h1>
+    <h1 class="iceland-regular">Web Development</h1>
     <main>
-
         <section class="border">
-            <h2>Welcome to my site</h2>
-            <p>Scotthamilton.site - Hello World. It is 2025; studying html, css, Javascript and then some (php, python, C#, C+, C++ texscript, nodejs, react, docker, among other codinlanuages, platforms and frameworks, a lot of front end and some backend, while getting an understanding of full stack web development as well as gaming development, machinlearning, data analysis with multy platform APIs). Soon to utilize server side technologies while creating multy platform applications with react.</p>
+            <h2>Web development as a whole</h2>
+            <p>Developing the web, involves front end and back end building of the user experience and any programing, logic and databases needed to complete a full stack development which utilizes user interfaces and server side technologies. Think of the front end as a website design that users can see when browsing the internet and think of back end as the server side which is usually a host that with code and many live servers housed in a cool enviroment in turn supports the code of the front end being seen by everyday individuals browsing the internet that visit websites designed by a website designer. Both the front end and back end make up the full stack.</p>
+            <p>On this page I will discuss in both easy to understand layman terms and experienced coder terms from what I know personally. For you to gain a deeper understanding than before. That is my intention anyway. I rememenr starting out and the overwhelmness I had. I will say this. It takes hours and hours and hours on top of hours and hours of practice and studying. You have to start witih the concept of ownership of really wanting it. To me it is like a puzzle of puzzles and each piece fits into part of a puzzle that fits into another puzzle. That's what I see anyway. It could be different for you. I think to myself, "I'll never know if I don't try."</p>
         </section>
 
         <section class="border">
-            <h2>Websites I've published</h2>
-            <p>Some of these sites are still works in progress. Although I would say they all always are.</p>
-            <ul>
-                <li><a target="_blank" href="https://scott-hamilton.com">Scott Hamilton</a></li>
-                <li><a target="_blank" href="https://netform.info">Net Form</a></li>
-                <li><a target="_blank" href="https://hamiltonswoodcraft.com">Hamilton's Woodcraft</a></li>
-                <li><a target="_blank" href="https://whitehat.press">White Hat DOT Press</a></li>
-                <li><a target="_blank" href="https://scottscg.com">Scotts CG</a></li>
-                <li><a target="_blank" href="https://scotts-ads.com">Scott's Ads</a></li>
-                <li><a target="_blank" href="https://lintless-vents.com">Lintless Vents</a></li>
-                <li><a target="_blank" href="https://royssmallenginerepair.com">Roy's small engine repair</a></li>
-                <li><a target="_blank" href="https://publish.obsidian.md/coding">Obsidian coding notes</a></li>
-            </ul>
+            <h2>Front end</h2>
+            <h3>Website design</h3>
+            <p class="p-b">There are ultimately 3 ways to design a website.</p>
+            <ol>
+                <li>Code</li>
+                <li>Website deisgn application</li>
+                <li>Pay someone else to do it for you, which will utilize either 1 or 2.</li>
+            </ol>
         </section>
 
         <section class="border">
