--- a/buttons.html
+++ b/buttons.html
@@ -66,6 +66,9 @@
         </div>
     </div>
     </div>
+    <section class="block-blue" id="btn-a">
+        <a target="_self" href="home.html">CODING JOURNEY</a>
+    </section>
     <footer>
         <a href="https://scotthamilton.site/">Scott Hamilton's Site</a>
     </footer>
