--- a/css4.html
+++ b/css4.html
@@ -4,35 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/LOGO-FAVICON.png" type="image/x-icon">
-    <title>Coding Journey</title>
+    <title>CSS4</title>
     <link rel="stylesheet" href="static/css4.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Iceland&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li class="nav-img"><img width="80" src="images/LOGO-150-PNG.png" alt="logo"></li>
-                <li class="nav-a"><a target="_self" href="home.html">CODING JOURNEY</a></li>
-                <li class="nav-a"><a target="_self" href="about.html">ABOUT</a></li>
-                <li class="nav-a"><a target="_self" href="codingjournal.html">CODING JOURNAL</a></li>
-                <li class="nav-a"><a target="_self" href="code.html">CODE</a></li>
-                <li class="nav-a"><a target="_self" href="links.html">LINKS</a></li>
-                <li class="nav-a"><a target="_blank" href="https://netform.info/Scott-Hamiltons-Coding-site">CONTACT ME</a></li>
+                <li class="fc-img"><img width="80" src="images/LOGO-150-PNG.png" alt="logo"></li>
+                <li class="fc-a"><a target="_self" href="home.html">CODING JOURNEY</a></li>
+                <li class="fc-a"><a target="_self" href="about.html">ABOUT</a></li>
+                <li class="fc-a"><a target="_self" href="codingjournal.html">CODING JOURNAL</a></li>
+                <li class="fc-a"><a target="_self" href="code.html">CODE</a></li>
+                <li class="fc-a"><a target="_self" href="links.html">LINKS</a></li>
+                <li class="fc-a"><a target="_blank" href="https://netform.info/Scott-Hamiltons-Coding-site">CONTACT ME</a></li>
             </ul>
         </nav>
-</header>
-        <div class="box-c">BOX-B</div>
-        <div class="box-c">ease - the transition has a slow start, fast middle, then slow end
+    </header>
+    <div class="fc-b">BOX-B</div>
+    <div class="fc-b">
+            has a slow start, fast middle, then slow end
             linear - the transition has a consistent speed from start to end
             ease-in - the transition will have a slow start
             ease-out - the transition will have a slow end
             ease-in-out - the transition has a slow start and end
             cubic-bezier(n,n,n,n) - a customizable transition values that we specify ourselves. It’s handy to use generator tools such as https://cubic-bezier.com/.
     </div>
-    <div class="box-c">ease - the transition has a slow start, fast middle, then slow end
+    <div class="fc-b">
+            ease - the transition has a slow start, fast middle, then slow end
             linear - the transition has a consistent speed from start to end
             ease-in - the transition will have a slow start
             ease-out - the transition will have a slow end
