--- a/index.html
+++ b/index.html
@@ -31,72 +31,16 @@
     </header>
     <h1 class="iceland-regular">Coding Journey</h1>
     <main>
-        <a href="webdev.html">Web development by Scott Hamilton</a>
         <section class="border">
-            <h2>Welcome to my site</h2>
+            <h2><a target="_self" href="https://scotthamilton.site/home">Welcome to my site</a></h2>
             <p>Scotthamilton.site - Hello World. It is 2025; studying html, css, Javascript and then some (php, python, C#, C+, C++ texscript, nodejs, react, docker, among other codinlanuages, platforms and frameworks, a lot of front end and some backend, while getting an understanding of full stack web development as well as gaming development, machinlearning, data analysis with multy platform APIs). Soon to utilize server side technologies while creating multy platform applications with react.</p>
             <p>Currently learning < a href="css.html">CSS </a>and html forms with a hint of javascript. While I'm learning mainly html, css and javascript play roles in froms.</p>
         </section>
-
-        <section class="border">
-            <h2>Websites I've published</h2>
-            <p>Some of these sites are still works in progress. Although I would say they all always are.</p>
-            <ul>
-                <li><a target="_blank" href="https://scott-hamilton.com">Scott Hamilton</a></li>
-                <li><a target="_blank" href="https://netform.info">Net Form</a></li>
-                <li><a target="_blank" href="https://hamiltonswoodcraft.com">Hamilton's Woodcraft</a></li>
-                <li><a target="_blank" href="https://whitehat.press">White Hat DOT Press</a></li>
-                <li><a target="_blank" href="https://scottscg.com">Scotts CG</a></li>
-                <li><a target="_blank" href="https://scotts-ads.com">Scott's Ads</a></li>
-                <li><a target="_blank" href="https://lintless-vents.com">Lintless Vents</a></li>
-                <li><a target="_blank" href="https://royssmallenginerepair.com">Roy's small engine repair</a></li>
-                <li><a target="_blank" href="https://publish.obsidian.md/coding">Obsidian coding notes</a></li>
-            </ul>
-        </section>
-
-        <section class="border">
-            <h2>Pertaining to me</h2>
-            <ul>
-                <li><a href="https://orcid.org/0009-0008-1368-329X">OrcID</a></li>
-                <li><a href="https://github.com/scott-hamiltons">Git Hub</a></li>
-                <li><a href="https//scotthamilton.pro">Gravatar</a></li>
-            </ul>
-        </section>
-
-        <section class="border">
-            <h2>Recommended news and information sites</h2>
-            <ul>
-                <li><a target="_blank" href="https://developer.mozilla.org/en-US/">MDN</a></li>
-                <li><a target="_blank" href="https://www.w3schools.com/">W3 schools</a></li>
-                <li><a target="_blank" href="https://validator.w3.org/">W3 Validator</a></li>
-                <li><a target="_blank" href="https://css-tricks.com/">CSS TRICKS</a></li>
-                <li><a target="_blank" href="https://dev.to/">Dev</a></li>
-                <li><a target="_blank" href="https://www.freecodecamp.org/">FreeCodeCamp</a></li>
-                <li><a target="_blank" href="https://alistapart.com/">A List Apart</a></li>
-                <li><a target="_blank" href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
-                <li><a target="_blank" href="https://www.codecademy.com/">CodeAcademy</a></li>
-                <li><a target="_blank" href="https://stackoverflow.com/">Stack Overflow</a></li>
-                <li><a target="_blank" href="https://discord.com/invite/apa6Rn7uEj">MDN Web Docs Community</a></li>
-                <li><a target="_blank" href="https://scrimba.com/home?via=mdn">Scrimba</a></li>
-                <li><a target="_blank" href="https://www.codenewbie.org/">CodeNewbie</a></li>
-                <li><a target="_blank" href="https://dev.to/">DEV</a></li>
-            </ul>
-        </section>
-
-        <div id="Page1" style="background-color:rgb(0, 0, 0);color:rgb(255, 255, 255)">
-            <h1>Hello I am In Section One Without Refresh</h1>
-            <a href="#" onclick="return show('Page2','Page1');">INVERT</a>
-        </div>
-        <div id="Page2" style="display:none;background-color:rgb(255, 255, 255);color:rgb(0, 0, 0);">
-            <h1>Hello I am In Section Two Without Refresh</h1>
-            <a href="#" onclick="return show('Page1','Page2');">INVERT</a>
-        </div>
-
     </main>
     <footer>
-        <p>How will I know if I don't try?</p>
-        <a target="_self" href="https://scotthamilton.site/">Scott Hamilton's Site</a>
+        <a target="_self" href="https://scotthamilton.site/home">Scott Hamilton's Site</a>
     </footer>
+    <br />
     <br />
 </body>
 </html>
