--- a/css.html
+++ b/css.html
@@ -21,13 +21,6 @@
                 <li class="btn"><a target="_self" href="code.html">CODE</a></li>
                 <li class="btn"><a target="_self" href="links.html">LINKS</a></li>
                 <li class="btn"><a target="_blank" href="https://netform.info/Scott-Hamiltons-Coding-site">CONTACT ME</a></li>
-                <li><img width="80" src="images/LOGO-150-PNG.png" alt="logo"></li>
-                <li class="btn"><a target="_self" href="home.html">CODING JOURNEY</a></li>
-                <li class="btn"><a target="_self" href="about.html">ABOUT</a></li>
-                <li class="btn"><a target="_self" href="codingjournal.html">CODING JOURNAL</a></li>
-                <li class="btn"><a target="_self" href="code.html">CODE</a></li>
-                <li class="btn"><a target="_self" href="links.html">LINKS</a></li>
-                <li class="btn"><a target="_blank" href="https://netform.info/Scott-Hamiltons-Coding-site">CONTACT ME</a></li>
             </ul>
         </nav>
     </header>
@@ -38,46 +31,46 @@
     <br />
     <div class="row">
         <div class="column">
-            <h2>CSS test page 3</h2>
-            <h3><a target="_blank" href="testpage3.html">Scroll effect failed - 20250601</a></h3>
-            <p>I got this code from a codepen promotional site where there were lots of other code snippets available. I bleive that you need a subscription to unlock the links needed to complete the code to display the scroll effect correctly. So, this was not pure code, the code had links to code in other places that were locked unless you had a subscription with code pen particularly, I believe.</p>
+            <h2>Scroll Effect</h2>
+            <h3><a target="_blank" href="testpage3.html">Working on scroll effect</a></h3>
+            <p class="p-b"> While this code involves more that css. I discovered it while learning css. I got this code from a codepen promotional site where there were lots of other code snippets available. I bleive that you need a subscription to unlock the links needed to complete the code to display the scroll effect correctly. So, this was not pure code, the code had links to code in other places that were locked unless you had a subscription with code pen particularly, I believe.</p>
         </div>
 
         <div class="column">
-            <h2>Column 2</h2>
+            <h2>CSS 2</h2>
             <p>Some text..</p>
         </div>
 
         <div class="column">
-            <h2>Column 3</h2>
+            <h2>CSS 3</h2>
             <p>Some text..</p>
         </div>
 
         <div class="column">
-            <h2>Column 4</h2>
+            <h2>CSS 4</h2>
             <p>Some text..</p>
         </div>
     </div>
     <br />
     <div class="row">
         <div class="column">
-            <h2>CSS test page 3</h2>
-            <h3><a target="_blank" href="testpage3.html">Scroll effect failed - 20250601</a></h3>
-            <p>I got this code from a codepen promotional site where there were lots of other code snippets available. I bleive that you need a subscription to unlock the links needed to complete the code to display the scroll effect correctly. So, this was not pure code, the code had links to code in other places that were locked unless you had a subscription with code pen particularly, I believe.</p>
+            <h2>CSS 5</h2>
+            <h3><a target="_blank" href="testpage3.html">More CSS</a></h3>
+            <p>I got this code</p>
         </div>
 
         <div class="column">
-            <h2>Column 2</h2>
+            <h2>CSS 6</h2>
             <p>Some text..</p>
         </div>
 
         <div class="column">
-            <h2>Column 3</h2>
+            <h2>CSS 7</h2>
             <p>Some text..</p>
         </div>
 
         <div class="column">
-            <h2>Column 4</h2>
+            <h2>CSS 8</h2>
             <p>Some text..</p>
         </div>
     </div>
