--- a/css.html
+++ b/css.html
@@ -26,23 +26,24 @@
     </header>
     <br>
     <h1 class="iceland-regular">CSS</h1>
+        <p>Practicing CSS, below are links to pages where I attempt to master various aspects of CSS. Some of these links lead to pages where it is all my own code and some are pages where I copied snippets of code from somewhere else.</p>
     <br>
-    <h2>CSS tests</h2>
-    <br />
     <div class="row">
         <div class="column">
-            <h2>Scroll Effect</h2>
+            <h2>THIS PAGE</h2>
+            <h3><span style="color: rgb(0, 255, 0)">This page is practice</a></h3>
+            <p class="p-b">I edit the code on this page often. Simple css code. Practice, practice, practice, practice, practice, practice, Master.</p>
+        </div>
+
+        <div class="column">
+            <h2>SCROLL EFFECT</h2>
             <h3><a target="_blank" href="testpage3.html">Working on scroll effect</a></h3>
             <p class="p-b"> While this code involves more that css. I discovered it while learning css. I got this code from a codepen promotional site where there were lots of other code snippets available. I bleive that you need a subscription to unlock the links needed to complete the code to display the scroll effect correctly. So, this was not pure code, the code had links to code in other places that were locked unless you had a subscription with code pen particularly, I believe.</p>
         </div>
 
         <div class="column">
-            <h2>CSS 2</h2>
-            <p>Some text..</p>
-        </div>
-
-        <div class="column">
             <h2>CSS 3</h2>
+            <h3><a target="_blank" href="css3.html">A mix of anything</a></h3>
             <p>Some text..</p>
         </div>
 
@@ -84,6 +85,7 @@
 
 
     <!--- Code for snippet copying on the HTML webpage, down to the bottom of br -->
+    <h2>CODE SNIPPETS</h2>
     <section class="border">
         <h2 class="h2">Anchor element appearing as a button</h2>
         <p>To make a button style link. Copy the code below. You will need to place the html code into you html file and the css code into your css file. Alternatively you could place the css code inline as a style element, however this is not considered good practice.</p>
