--- a/css.html
+++ b/css.html
@@ -42,14 +42,15 @@
         </div>
 
         <div class="column">
-            <h2>CSS 3</h2>
+            <h2>PLAIN PRACTICE</h2>
             <h3><a target="_blank" href="css3.html">A mix of anything</a></h3>
-            <p>Some text..</p>
+            <p class="p-b">IN here I practice anything that comes to mind. I'm currently working on certifications, then on to more things from there. In order to get there, I practice, practice, practice.</p>
         </div>
 
         <div class="column">
-            <h2>CSS 4</h2>
-            <p>Some text..</p>
+            <h2>HOVER EFFECTS</h2>
+            <h3><a target="_blank" href="hovereffects.html">Hover effect practices.</a></h3>
+            <p class="p-b">Testing out different hover effects techniques.</p>
         </div>
     </div>
     <br />
@@ -85,7 +86,8 @@
 
 
     <!--- Code for snippet copying on the HTML webpage, down to the bottom of br -->
-    <h2>CODE SNIPPETS</h2>
+    <h2 class="htoos">CODE SNIPPETS</h2>
+    <br>
     <section class="border">
         <h2 class="h2">Anchor element appearing as a button</h2>
         <p>To make a button style link. Copy the code below. You will need to place the html code into you html file and the css code into your css file. Alternatively you could place the css code inline as a style element, however this is not considered good practice.</p>
