--- a/css4.html
+++ b/css4.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/LOGO-FAVICON.png" type="image/x-icon">
-    <title>CSS4</title>
     <title>CSS4</title>
     <link rel="stylesheet" href="static/css4.css">
 </head>
@@ -12,13 +11,6 @@
     <header>
         <nav>
             <ul>
-                <li class="fc-img"><img width="80" src="images/LOGO-150-PNG.png" alt="logo"></li>
-                <li class="fc-a"><a target="_self" href="home.html">CODING JOURNEY</a></li>
-                <li class="fc-a"><a target="_self" href="about.html">ABOUT</a></li>
-                <li class="fc-a"><a target="_self" href="codingjournal.html">CODING JOURNAL</a></li>
-                <li class="fc-a"><a target="_self" href="code.html">CODE</a></li>
-                <li class="fc-a"><a target="_self" href="links.html">LINKS</a></li>
-                <li class="fc-a"><a target="_blank" href="https://netform.info/Scott-Hamiltons-Coding-site">CONTACT ME</a></li>
                 <li class="fc-img"><img width="80" src="images/LOGO-150-PNG.png" alt="logo"></li>
                 <li class="fc-a"><a target="_self" href="home.html">CODING JOURNEY</a></li>
                 <li class="fc-a"><a target="_self" href="about.html">ABOUT</a></li>
